--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,26 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/images/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!--meta name="viewport" content="width=device-width, initial-scale=1.0" /-->
+    <!--meta
+      id="viewport-tag"
+      name="viewport"
+      content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0, initial-scale=1, viewport-fit=cover"
+    /-->
+    <meta
+      name="viewport"
+      content="width = device-width, initial-scale = 1.0, minimum-scale = 1, maximum-scale = 1, user-scalable = no"
+    />
+    <meta name="apple-mobile-web-app-title" content="App name" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="A website landing page similar to Tesla"
     />
+
     <!--link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /-->
     <link rel="stylesheet" href="%PUBLIC_URL%/css/styles.css" type="text/css" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
