--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     /-->
     <meta
       name="viewport"
-      content="width = device-width, initial-scale = 1.0, minimum-scale = 1, maximum-scale = 1, user-scalable = no"
+      content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0, initial-scale=1, shrink-to-fit=no, viewport-fit=cover"
     />
     <meta name="apple-mobile-web-app-title" content="App name" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
