Edited styling content

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/images/favicon.ico" />
-    <!--meta name="viewport" content="width=device-width, initial-scale=1.0" /-->
     <!--meta
       id="viewport-tag"
       name="viewport"
@@ -11,7 +10,7 @@
     /-->
     <meta
       name="viewport"
-      content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0, initial-scale=1, shrink-to-fit=no, viewport-fit=cover"
+      content="width=device-width, user-scalable=no, initial-scale=1"
     />
     <meta name="apple-mobile-web-app-title" content="App name" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
