--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,9 @@
       content="A website landing page similar to Tesla"
     />
 
-    <!--link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /-->
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo512.png" />
+
     <link rel="stylesheet" href="%PUBLIC_URL%/css/styles.css" type="text/css" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Jason's Tesla</title>
